# home_performance

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  deploy.sh  docker-compose.dev.yml  hacs.json  pyproject.toml  release-please-config.json  requirements_dev.txt
.devContainer/: devContainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: hacs.yml  hassfest.yml  release-please.yml  tests.yml
blueprints/automation/home_performance/: window_open_notification.yaml
custom_components/home_performance/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  services.yaml  strings.json
custom_components/home_performance/frontend/: __init__.py
custom_components/home_performance/translations/: en.json  fr.json  it.json
custom_components/home_performance/www/: home-performance-card.js
custom_components/thermal_learning/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/thermal_learning/translations/: en.json  fr.json
examples/: dashboard_card.yaml  excellence-visualization-prototypes.html  temp-variation-warning-prototypes.html
tests/: __init__.py  conftest.py  test_const.py  test_frontend.py  test_models.py  test_websocket.py
